# tesserae-pi-bin-client

./: .gitignore  README.md  pyproject.toml
scripts/: install-service.sh  install.sh  tesserae-pi-bin-client.service.in
src/tesserae_pi_bin_client/: bootstrap_config.py  config.py  heartbeat.py  main.py  mqtt_loop.py  paint.py  panels.py  unpack.py
src/tesserae_pi_bin_client/transports/: __init__.py  mqtt.py  rest.py
tests/: test_config.py  test_heartbeat.py  test_mqtt_loop.py  test_paint.py  test_rest.py  test_unpack.py
