[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesserae-pi-bin-client"
version = "0.1.0"
description = "Raspberry Pi daemon that subscribes to a Tesserae server over MQTT and paints 4-bpp .bin frames onto an Inky Impression."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Tesserae" }]
dependencies = [
    "paho-mqtt>=2.0,<3",
    # PINNED — paint.py reaches into a private inky internal (_update).
    # Bumping this requires re-validating against paint.py on real hardware.
    "inky[rpi]==2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
tesserae-pi-bin-client = "tesserae_pi_bin_client.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
strict = false

[[tool.mypy.overrides]]
# Contract modules — strict.
module = [
    "tesserae_pi_bin_client.config",
    "tesserae_pi_bin_client.unpack",
    "tesserae_pi_bin_client.panels",
    "tesserae_pi_bin_client.heartbeat",
    "tesserae_pi_bin_client.mqtt_loop",
]
strict = true

[[tool.mypy.overrides]]
# Hardware-touching paths — defaults.
module = ["tesserae_pi_bin_client.paint", "tesserae_pi_bin_client.main"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["paho.*", "inky.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
